docs/deployment-guide/goals/k8s/nginx/integrated/provider/provider-connector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: provider-connector
  name: provider-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: provider-connector
  template:
    metadata:
      labels:
        io.kompose.service: provider-connector
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: provider-connector-config
          image: ghcr.io/sovity/edc-ce:11.0.0
          name: provider-connector
          ports:
            - containerPort: 11002
              protocol: TCP
            - containerPort: 11003
              protocol: TCP
      restartPolicy: Always
