docs/deployment-guide/goals/k8s/nginx/integrated/provider/provider-dp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: provider-dp
  name: provider-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: provider-dp
  template:
    metadata:
      labels:
        io.kompose.service: provider-dp
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: provider-dp-config
          image: ghcr.io/sovity/edc-ce:11.0.0
          name: provider-dp
          ports:
            - containerPort: 12001
              name: health
              protocol: TCP
            - containerPort: 12002
              name: control
              protocol: TCP
            - containerPort: 12003
              name: public
              protocol: TCP
            - containerPort: 12004
              name: proxy
              protocol: TCP
      restartPolicy: Always
